...
                    android:textColor="#FFFFFF"
                    android:background="@drawable/bgbtnpembayaran"
                    android:layout_width="120dp"
                    android:layout_height="45dp"/>

                <Button
                    android:id="@+id/btn_lunas_utang"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="LUNAS"
                    android:onClick="btnLunasUtang"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/bgbtnpembayaran"
...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <Button
                android:onClick="bayarUtang"
                android:id="@+id/btn_bayar_utang"
                android:text="SIMPAN"
                android:textColor="#FFFFFF"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bgbtn"
                android:layout_width="match_parent"
...
