...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/list_utang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp">
    </ListView>

    <RelativeLayout
...
            app:fabAlignmentMode="center"
            >

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_add_utang"
            app:fabSize="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            app:backgroundTint="@color/design_default_color_primary_dark"
            app:elevation="0dp"
...
