<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utang.TambahUtang">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bgform"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nama_utang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Nama"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_nama_utang"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bginput"
                android:hint="Masukkan nama"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_jmlutang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Jumlah Utang"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_jmlutang"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bginput"
                android:hint="Masukkan jumlah"
                android:inputType="number"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5"
                android:textSize="15sp" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_deskirpsi_utang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Deskripsi"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_deskripsi_utang"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bginput"
                android:hint="Masukkan keterangan"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5"
                android:textSize="15sp" />

        </LinearLayout>

        <RelativeLayout
            android:clickable="true"
            android:onClick="setDateUtang"
            android:id="@+id/date_utang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_date"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_view_day_black_24dp"/>

            <LinearLayout
                android:layout_toRightOf="@id/icon_date"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_text_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Tanggal jatuh tempo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/set_date_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="28/06/2019"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/starrted1utang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="selectFab1Utang"
                app:fabSize="normal"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_notifications_off_black_24dp">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/starrted2utang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="selectFab2Utang"
                app:fabSize="normal"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_notifications_active_black_24dp">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>

        </RelativeLayout>

        <LinearLayout
            android:clickable="true"
            android:onClick="setTimeUtang"
            android:id="@+id/time_utang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <ImageView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_access_time_black_24dp"/>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_text_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Pukul"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/set_time_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="22:10"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/repeat_utang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:id="@+id/repeat_icon_utang"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_repeat_black_24dp"/>

            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/repeat_icon_utang"
                android:layout_marginLeft="10dp"
                android:id="@+id/repeat_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repeat_text_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Pengulangan"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/set_repeat_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </LinearLayout>

            <Switch
                android:id="@+id/repeat_switch_utang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:onClick="onSwitchRepeatUtang"
                android:checked="true"
                android:textOn="On"
                android:textOff="Off"/>

        </RelativeLayout>

        <LinearLayout
            android:clickable="true"
            android:onClick="setRepeatNoUtang"
            android:id="@+id/RepeatNo_utang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <ImageView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_unfold_more_black_24dp"/>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repeat_no_text_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Interval Pengulangan"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/set_repeat_no_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:onClick="selectRepeatTypeUtang"
            android:id="@+id/repeat_type_utang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <ImageView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_subject_black_24dp"/>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repeat_type_text_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Tipe Pengulangan"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/set_repeat_type_utang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_simpan_utang"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bgbtn"
                android:text="SIMPAN CATATAN"
                android:textColor="#ffffff" />

        </LinearLayout>



    </LinearLayout>

</ScrollView>